--- a/Substack.css
+++ b/Substack.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name        substack
-@description This is your new file, start writing code
+@description Remove substack junk from substack pages
 @match       *://*.substack.com/*
 @match       *://www.piratewires.com/*
 ==/UserStyle== */
